apps/carbide-registry/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carbide-registry-dashboard
  labels:
    app.kubernetes.io/name: carbide-registry-dashboard
    app.kubernetes.io/instance: carbide-registry-dashboard
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: carbide-registry-dashboard
      app.kubernetes.io/instance: carbide-registry-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: carbide-registry-dashboard
        app.kubernetes.io/instance: carbide-registry-dashboard
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 65532
        runAsGroup: 65532
        runAsUser: 65532
      containers:
        - name: carbide-registry-dashboard
          securityContext:
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            runAsUser: 65532
          image: "clanktron/carbide-registry-dashboard:dev"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
