apps/carbide-registry/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: carbide-registry-dashboard
  labels:
    app.kubernetes.io/name: carbide-registry-dashboard
    app.kubernetes.io/instance: carbide-registry-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: carbide-registry-dashboard
    app.kubernetes.io/instance: carbide-registry-dashboard
