apps/carbide-registry/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carbide-registry-dashboard
  labels:
    app.kubernetes.io/name: carbide-registry-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: ${EXTERNAL_INGRESS}
  tls:
  - hosts:
      - dashboard.carbide.registry.${EXTERNAL_DOMAIN}
    secretName: carbide-registry-dashboard-tls
  rules:
  - host: dashboard.carbide.registry.${EXTERNAL_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: carbide-registry-dashboard
            port:
              number: 8080
